Link tela inicial
Foi adicionado um link para voltar a tela inicial do site

--- a/Canais/premiere3.html
+++ b/Canais/premiere3.html
@@ -13,6 +13,10 @@
         <iframe name=Player src="https://sinalpublico.com/player3/ch.php?canal=premiere3" frameborder=0 height=300 scrolling=no width=540 allowFullScreen> </iframe>
 
     </div>
+
+    <a href="../index.html">
+        <h1>Voltar a tela inicial</h1>
+    </a>
     
 </body>
 </html>
