--- a/Canais/premiere2.html
+++ b/Canais/premiere2.html
@@ -11,8 +11,11 @@
     <div>
         <h1>Premiere 2</h1>
         <iframe name=Player src="https://sinalpublico.com/player3/ch.php?canal=premiere2" frameborder=0 height=300 scrolling=no width=500 allowFullScreen> </iframe>
-
     </div>
+
+    <a href="../index.html">
+        <h1>Voltar a tela inicial</h1>
+    </a>
     
 </body>
 </html>
