--- a/Canais/premiereClubes.html
+++ b/Canais/premiereClubes.html
@@ -12,6 +12,10 @@
         <h1>Premiere Clubes</h1>
         <iframe name=Player src="https://sinalpublico.com/player3/ch.php?canal=premiereclubes" frameborder=0 height=300 scrolling=no width=500 allowFullScreen> </iframe>
     </div>
+
+    <a href="../index.html">
+        <h1>Voltar a tela inicial</h1>
+    </a>
     
 </body>
 </html>
